# Bot_Riga_guide

./: .env.example  .gitignore  CLAUDE_BRIEF.md  DEPLOY.md  Dockerfile  PROTOCOL.md  README.md  check_facts.py  check_kb.py  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  M14_PLAN.md  TECH_SPEC.md  USER_GUIDE.md  USER_SPEC.md  hitl_text_pack.yaml
infra/cron/: riga-guide.cron
infra/systemd/: riga-guide.service
ingest/: __init__.py  __main__.py  chunker.py  geo.py  pipeline.py  scraper.py  tagger.py
ingest/scrapers/: __init__.py  firecrawl.py  wikipedia.py
ingest/seeds/: riga.yaml
scripts/: README.md  __init__.py  backup.sh  backup_kb.sh  daily_rollup.py  restore_kb.sh  run_hitl.py
src/: __init__.py  config.py
src/bot/: __init__.py  __main__.py  gateway.py  i18n_ru.py  photo_utils.py  rate_limit.py  ui.py
src/kb/: __init__.py  models.py  store.py
src/llm/: __init__.py  gemini.py  openai.py  retry.py  tavily.py
src/rag/: __init__.py  graph.py  singleton.py  state.py
src/session/: __init__.py  models.py  store.py
src/telemetry/: __init__.py  log.py
tests/: __init__.py
tests/fixtures/: __init__.py  fake_gemini.py
tests/ingest/: __init__.py  test_pipeline.py  test_tagger.py
tests/integration/: __init__.py  test_kb.py  test_rag_graph.py  test_session.py
tests/unit/: __init__.py  test_chunker.py  test_config.py  test_log.py  test_photo_utils.py  test_prompts.py  test_rate_limit.py  test_retry.py  test_ui.py
work/m10-deploy/: ag-task-next.md  distance_strict_finding.md  (+3 more)
(+21 files in other folders)
