[project]
name = "riga-guide-bot"
version = "0.1.0"
description = "AI-powered Telegram tour guide bot for Latvia (Riga, Sigulda, Rundāle)"
requires-python = ">=3.12"
readme = "README.md"

# === Runtime: Bot ===
dependencies = [
    "python-telegram-bot>=21.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "google-genai>=1.0",
    "chromadb>=0.5",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tavily-python>=0.5",
    "jinja2>=3.1",
    "rapidfuzz>=3.0",
    "structlog>=24.0",
]

# === Ingest (дополнительные) ===
[project.optional-dependencies]
ingest = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "firecrawl-py>=1.0",
    "wikipedia>=1.4",
    "pyyaml>=6.0",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "ingest*"]

# === Ruff ===
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

# === Pytest ===
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# === Mypy ===
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
